// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssuesQuery #iterateIssues Pulling data out 1`] = `
Object {
  "assignees": Object {
    "totalCount": 1,
  },
  "id": "111",
  "labels": Object {
    "totalCount": 2,
  },
  "repoId": "R_kgDOI2pL-A",
  "repoName": "reimagined-barnacle",
  "title": "Need to add code part 1",
}
`;

exports[`IssuesQuery #iterateIssues Pulling data out 2`] = `
Object {
  "assignees": Object {
    "totalCount": 1,
  },
  "id": "2222",
  "labels": Object {
    "totalCount": 2,
  },
  "repoId": "R_kgDOI2pL-A",
  "repoName": "reimagined-barnacle",
  "title": "Need to add code part 2",
}
`;

exports[`IssuesQuery #iterateIssues Pulling data out 3`] = `
Object {
  "assignees": Object {
    "totalCount": 1,
  },
  "id": "333",
  "labels": Object {
    "totalCount": 2,
  },
  "repoId": "R_kgDOI2pL-A",
  "repoName": "reimagined-barnacle",
  "title": "Need to add code part 3",
}
`;

exports[`IssuesQuery #iterateIssues Pulling data out 4`] = `
Object {
  "query": "
    query(
      $repoName: String!,
      $login: String!
      $since: DateTime!,
      $maxSearchLimit: Int!, 
      $issuesCursor: String
    ) {
      repository(name: $repoName, owner: $login) {
        id
        name
        issues(first: $maxSearchLimit, after: $issuesCursor, filterBy: { since: $since }) {
          nodes {
            
    id
    activeLockReason
    author {
      ...on User {
        name
        login
      }
    }
    authorAssociation
    body
    # bodyHTML
    # bodyResourcePath
    bodyText
    bodyUrl
    closed # boolean
    closedAt
    # comments # probably a child object if we want these
    createdAt
    createdViaEmail # boolean
    databaseId
    isPinned # boolean
    lastEditedAt
    locked # boolean
    # milestone # a Milestone object, could put the fields in-line like author
    number
    # participants # Participants objects
    # projectCards # ProjectCardConnection!
    publishedAt
    # reactionGroups # : [ReactionGroup!]
    resourcePath
    state
    title
    titleHTML
    updatedAt
    url
    labels {
      totalCount
    }
    assignees {
      totalCount
    }
  
          }
          pageInfo {
            endCursor
            hasNextPage
          }
        }
      }
      ...on Query {
    rateLimit {
      limit
      cost
      remaining
      resetAt
    }
  }
    }",
  "queryVariables": Object {
    "login": "J1-Test",
    "maxSearchLimit": 100,
    "repoName": "reimagined-barnacle",
    "since": "2011-10-05T14:48:00.000Z",
  },
}
`;

exports[`IssuesQuery #iterateIssues Pulling data out 5`] = `
Object {
  "query": "
    query(
      $repoName: String!,
      $login: String!
      $since: DateTime!,
      $maxSearchLimit: Int!, 
      $issuesCursor: String
    ) {
      repository(name: $repoName, owner: $login) {
        id
        name
        issues(first: $maxSearchLimit, after: $issuesCursor, filterBy: { since: $since }) {
          nodes {
            
    id
    activeLockReason
    author {
      ...on User {
        name
        login
      }
    }
    authorAssociation
    body
    # bodyHTML
    # bodyResourcePath
    bodyText
    bodyUrl
    closed # boolean
    closedAt
    # comments # probably a child object if we want these
    createdAt
    createdViaEmail # boolean
    databaseId
    isPinned # boolean
    lastEditedAt
    locked # boolean
    # milestone # a Milestone object, could put the fields in-line like author
    number
    # participants # Participants objects
    # projectCards # ProjectCardConnection!
    publishedAt
    # reactionGroups # : [ReactionGroup!]
    resourcePath
    state
    title
    titleHTML
    updatedAt
    url
    labels {
      totalCount
    }
    assignees {
      totalCount
    }
  
          }
          pageInfo {
            endCursor
            hasNextPage
          }
        }
      }
      ...on Query {
    rateLimit {
      limit
      cost
      remaining
      resetAt
    }
  }
    }",
  "queryVariables": Object {
    "issuesCursor": "Y3Vyc29yOjE=",
    "login": "J1-Test",
    "maxSearchLimit": 100,
    "repoName": "reimagined-barnacle",
    "since": "2011-10-05T14:48:00.000Z",
  },
  "rateLimit": Object {
    "cost": 1,
    "remaining": 4983,
  },
}
`;
